// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with divided items 1`] = `
<ul
  className="list"
  data-list-items-divided={true}
  role="listbox"
>
  <ListItem
    isSelected={false}
    key="123"
  />
  <ListItem
    isSelected={false}
    key="124"
  />
  <ListItem
    isSelected={false}
    key="125"
  />
  <ListItem
    isSelected={false}
    key="126"
  />
  <ListItem
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with items 1`] = `
<ul
  className="list"
  role="listbox"
>
  <ListItem
    isSelected={false}
    key="123"
  />
  <ListItem
    isSelected={false}
    key="124"
  />
  <ListItem
    isSelected={false}
    key="125"
  />
  <ListItem
    isSelected={false}
    key="126"
  />
  <ListItem
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with no items 1`] = `
<ul
  className="list"
  role="listbox"
/>
`;
